fix issue with wrapping elements

--- a/src/components/dockerItem.scss
+++ b/src/components/dockerItem.scss
@@ -8,4 +8,5 @@
 .docker-items {
   display: flex;
   list-style: none;
+  flex-wrap: wrap;
 }
